[gd_scene load_steps=5 format=2]

[ext_resource path="res://Area2D.gd" type="Script" id=1]
[ext_resource path="res://Textures/enemy/shmup_projectiles.png" type="Texture" id=2]
[ext_resource path="res://scripts/Sprite.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="Bullet" type="Area2D" groups=[
"Bullet",
]]
z_index = -1
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )
flip_h = true
flip_v = true
hframes = 2
region_enabled = true
region_rect = Rect2( 2, 55, 32, 16 )
script = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
